packages/nestjs-trpc/cli/tests/snapshots/generation__enum_literals.snap
---
source: tests/generation.rs
assertion_line: 131
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;
import { Priority, Status, TypeEnum } from "<FIXTURES>/enum-literals/types";
type __ItemsRouterModule_fixtures_root_enum_literals_items_router = typeof import("<FIXTURES>/enum-literals/items.router");
import type { __ResolveProcedureReturnType } from "./__nestjs-trpc-type-helpers";

const appRouter = t.router({
  items: t.router({
    getItem: publicProcedure
      .input(z.object({ id: z.string() }))
      .output(z.object({
    id: z.string(),
    type: z.literal(TypeEnum.Normal),
    status: z.literal(Status.Active),
    priority: z.literal(Priority.High),
}))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    createItem: publicProcedure
      .input(z.object({
            type: z.enum([TypeEnum.Normal, TypeEnum.Special]),
        }))
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as unknown as Awaited<__ResolveProcedureReturnType<__ItemsRouterModule_fixtures_root_enum_literals_items_router, "ItemsRouter", "createItem">>)
    })
});

export type AppRouter = typeof appRouter;
