packages/nestjs-trpc/cli/tests/snapshots/generation__external_imports.snap
---
source: tests/generation.rs
assertion_line: 94
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;
import { orderSchema } from "shared-schemas";
import { paymentSchema } from "@myorg/payment-types";
import type { OrdersRouter } from "<FIXTURES>/external-imports/orders.router";

const appRouter = t.router({
  orders: t.router({
    getOrder: publicProcedure
      .input(z.object({ id: z.string() }))
      .output(orderSchema)
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    processPayment: publicProcedure
      .input(paymentSchema)
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as unknown as Awaited<ReturnType<OrdersRouter["processPayment"]>>)
    })
});

export type AppRouter = typeof appRouter;
