packages/nestjs-trpc/cli/tests/snapshots/generation__merged_alias.snap
---
source: tests/generation.rs
assertion_line: 100
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;

const appRouter = t.router({
  posts: t.router({
    listPosts: publicProcedure
      .output(z.array(z.object({ id: z.string(), title: z.string() })))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    }),
  users: t.router({
    createUser: publicProcedure
      .input(z.object({ name: z.string() }))
      .output(z.object({ id: z.string(), name: z.string() }))
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    updateUser: publicProcedure
      .input(z.object({ id: z.string(), name: z.string() }))
      .output(z.object({ id: z.string(), name: z.string() }))
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    getUser: publicProcedure
      .input(z.object({ id: z.string() }))
      .output(z.object({ id: z.string(), name: z.string() }))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    listUsers: publicProcedure
      .output(z.array(z.object({ id: z.string(), name: z.string() })))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    })
});

export type AppRouter = typeof appRouter;
