packages/nestjs-trpc/cli/tests/snapshots/generation__nested_routers.snap
---
source: tests/generation.rs
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;
import { createPostInput } from "<FIXTURES>/nested/posts.router";

const appRouter = t.router({
  posts: t.router({
    getPost: publicProcedure
      .input(z.object({ id: z.string() }))
      .output(z.object({
    id: z.string(),
    title: z.string(),
    authorId: z.string(),
}))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    createPost: publicProcedure
      .input(createPostInput)
      .output(z.object({
    id: z.string(),
    title: z.string(),
    authorId: z.string(),
}))
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    }),
  users: t.router({
    getUser: publicProcedure
      .output(z.object({
    id: z.string(),
    name: z.string(),
}))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    listUsers: publicProcedure
      .output(z.array(z.object({
    id: z.string(),
    name: z.string(),
})))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    })
});

export type AppRouter = typeof appRouter;
