packages/nestjs-trpc/cli/tests/snapshots/generation__output_inference.snap
---
source: tests/generation.rs
assertion_line: 88
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;
import type { FolderRouter } from "<FIXTURES>/output-inference/folder.router";

const appRouter = t.router({
  folders: t.router({
    list: publicProcedure
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as unknown as Awaited<ReturnType<FolderRouter["list"]>>),
    getById: publicProcedure
      .output(z.object({ id: z.string() }))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    create: publicProcedure
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as unknown as Awaited<ReturnType<FolderRouter["create"]>>)
    })
});

export type AppRouter = typeof appRouter;
