packages/nestjs-trpc/cli/tests/snapshots/generation__path_aliases.snap
---
source: tests/generation.rs
assertion_line: 80
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;
import { itemSchema } from "@/schemas";

const appRouter = t.router({
  items: t.router({
    getItem: publicProcedure
      .input(z.object({ id: z.string() }))
      .output(itemSchema)
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    })
});

export type AppRouter = typeof appRouter;
