packages/nestjs-trpc/cli/tests/snapshots/generation__subscription.snap
---
source: tests/generation.rs
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;

const appRouter = t.router({
  events: t.router({
    getHistory: publicProcedure
      .output(z.array(z.object({
    id: z.string().uuid(),
    text: z.string(),
    timestamp: z.number(),
})))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    sendMessage: publicProcedure
      .input(z.object({ text: z.string() }))
      .output(z.object({
    id: z.string().uuid(),
    text: z.string(),
    timestamp: z.number(),
}))
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    onMessage: publicProcedure
      .input(z.object({ channelId: z.string() }))
      .output(z.object({
    id: z.string().uuid(),
    text: z.string(),
    timestamp: z.number(),
}))
      .subscription(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    onStatusChange: publicProcedure
      .output(z.object({ status: z.enum(['online', 'offline']) }))
      .subscription(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    })
});

export type AppRouter = typeof appRouter;
