packages/nestjs-trpc/cli/tests/snapshots/generation__transformer_from_library.snap
---
source: tests/generation.rs
assertion_line: 252
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";
import superjson from "superjson";

const t = initTRPC.create({ transformer: superjson });
const publicProcedure = t.procedure;
type __ItemsRouterModule_fixtures_root_transformer_library_items_router = typeof import("<FIXTURES>/transformer-library/items.router");
import type { __ResolveProcedureReturnType } from "./__nestjs-trpc-type-helpers";

const appRouter = t.router({
  items: t.router({
    getItem: publicProcedure
      .input(z.object({ id: z.string() }))
      .output(z.object({ id: z.string(), name: z.string() }))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    createItem: publicProcedure
      .input(z.object({ name: z.string() }))
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as unknown as Awaited<__ResolveProcedureReturnType<__ItemsRouterModule_fixtures_root_transformer_library_items_router, "ItemsRouter", "createItem">>)
    })
});

export type AppRouter = typeof appRouter;
