packages/nestjs-trpc/cli/tests/snapshots/generation__transformer_from_local_file.snap
---
source: tests/generation.rs
assertion_line: 203
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";
import { customTransformer } from "./my-transformer";

const t = initTRPC.create({ transformer: customTransformer });
const publicProcedure = t.procedure;
import type { ItemsRouter } from "<FIXTURES>/transformer-local/items.router";

const appRouter = t.router({
  items: t.router({
    getItem: publicProcedure
      .input(z.object({ id: z.string() }))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as unknown as Awaited<ReturnType<ItemsRouter["getItem"]>>)
    })
});

export type AppRouter = typeof appRouter;
