packages/nestjs-trpc/cli/tests/snapshots/generation__with_default_transformer.snap
---
source: tests/generation.rs
assertion_line: 128
expression: normalized
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";
import superjson from "superjson";

const t = initTRPC.create({ transformer: superjson });
const publicProcedure = t.procedure;
import { userSchema } from "<FIXTURES>/valid/simple-router/user.schema";

const appRouter = t.router({
  users: t.router({
    getUser: publicProcedure
      .input(z.object({ userId: z.string() }))
      .output(userSchema)
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    })
});

export type AppRouter = typeof appRouter;
